--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ padding:20px;
 background-color:white;
 }
 df-messenger {
-   --df-messenger-bot-message: #878fac;
-   --df-messenger-button-titlebar-color: #df9b56;
+   --df-messenger-bot-message: #ba55d3;
+   --df-messenger-button-titlebar-color: #ba55d3;
    --df-messenger-chat-background-color: #fafafa;
    --df-messenger-font-color: white;
    --df-messenger-send-icon: #878fac;
