--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ df-messenger {
    --df-messenger-button-titlebar-color: #ba55d3;
    --df-messenger-chat-background-color: #fafafa;
    --df-messenger-font-color: white;
-   --df-messenger-send-icon: white;
+   --df-messenger-send-icon: black;
    --df-messenger-user-message: #479b3d;
 }
 
