--- a/style.css
+++ b/style.css
@@ -41,14 +41,14 @@ margin:20px;
 padding:20px;
 background-color:white;
 }
-df-messenger {
-   --df-messenger-bot-message: black;
-   --df-messenger-button-titlebar-color: #ba55d3;
+  df-messenger {
+   --df-messenger-bot-message: #878fac;
+   --df-messenger-button-titlebar-color: #df9b56;
    --df-messenger-chat-background-color: #fafafa;
    --df-messenger-font-color: white;
-   --df-messenger-send-icon: black;
+   --df-messenger-send-icon: #878fac;
    --df-messenger-user-message: #479b3d;
-}
+  }
 
 
 *,
