--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ a.btn-border:hover {
     align-items: center;
     z-index: 90;
     background-color: #3584bb;
+    top:20px;
 }
 .menu-btn span,
 .menu-btn span:before,
